--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "teamprofile",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/clintrizzo/teamprofile.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/clintrizzo/teamprofile/issues"
-  },
-  "homepage": "https://github.com/clintrizzo/teamprofile#readme"
+    "name": "teamprofile",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "directories": {
+        "lib": "lib"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/clintrizzo/teamprofile.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/clintrizzo/teamprofile/issues"
+    },
+    "homepage": "https://github.com/clintrizzo/teamprofile#readme",
+    "dependencies": {
+        "inquirer": "^8.0.0",
+        "node": "^14.15.0",
+        "util": "^0.12.3",
+        "validate": "^5.1.0"
+    },
+    "devDependencies": {
+        "jest": "^26.6.3"
+    }
 }
